[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui_themes/themes/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/inventory/ItemPanel.gd" type="Script" id=2]

[node name="ItemPanel" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -190.0
margin_right = -20.0
margin_bottom = 137.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemInformation" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SyrupGrade" type="HBoxContainer" parent="ItemInformation"]
margin_right = 290.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="ItemInformation/SyrupGrade"]
margin_right = 143.0
margin_bottom = 28.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "GRADE:"
valign = 1

[node name="Variable" type="Label" parent="ItemInformation/SyrupGrade"]
margin_left = 147.0
margin_right = 290.0
margin_bottom = 28.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Amber"
align = 2
valign = 1

[node name="Producer" type="HBoxContainer" parent="ItemInformation"]
margin_top = 32.0
margin_right = 290.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="ItemInformation/Producer"]
margin_right = 140.0
margin_bottom = 28.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "PROD:"
uppercase = true

[node name="Variable" type="Label" parent="ItemInformation/Producer"]
margin_left = 144.0
margin_right = 290.0
margin_bottom = 28.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Sugar Shack"
align = 2
valign = 1

[node name="Quality" type="HBoxContainer" parent="ItemInformation"]
margin_top = 64.0
margin_right = 290.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="ItemInformation/Quality"]
margin_right = 143.0
margin_bottom = 28.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "QUALITY:"
valign = 1
uppercase = true

[node name="Variable" type="Label" parent="ItemInformation/Quality"]
margin_left = 147.0
margin_right = 290.0
margin_bottom = 28.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "69/100"
align = 2
valign = 1

[node name="BuyPrice" type="HBoxContainer" parent="ItemInformation"]
margin_top = 96.0
margin_right = 290.0
margin_bottom = 124.0

[node name="Label" type="Label" parent="ItemInformation/BuyPrice"]
margin_right = 143.0
margin_bottom = 28.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "BUY PRICE:"
valign = 1
uppercase = true

[node name="Variable" type="Label" parent="ItemInformation/BuyPrice"]
margin_left = 147.0
margin_right = 290.0
margin_bottom = 28.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "$420/ea"
align = 2
valign = 1
autowrap = true

[node name="Quantity" type="HBoxContainer" parent="ItemInformation"]
margin_top = 128.0
margin_right = 290.0
margin_bottom = 156.0

[node name="Label" type="Label" parent="ItemInformation/Quantity"]
margin_right = 143.0
margin_bottom = 28.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Barrels:"
valign = 1
uppercase = true

[node name="Variable" type="Label" parent="ItemInformation/Quantity"]
margin_left = 147.0
margin_right = 290.0
margin_bottom = 28.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "69"
align = 2
valign = 1
autowrap = true
